--- a/Assets/Scenes/Boss_Ursa.yaml
+++ b/Assets/Scenes/Boss_Ursa.yaml
@@ -15,8 +15,8 @@ GameObjects:
     Com_Collider:
       Center: [0, 0, 0]
       Type: Capsule
-      Radius: 0.100000001
-      Height: 0.200000003
+      Radius: 0.2
+      Height: 0.1
       Angle:
         - 0
         - 0
@@ -53,12 +53,12 @@ GameObjects:
       HasCollider: false
       Equipment: false
     Com_Stat:
-      Hp: [5000, 0, 5000, 100]
-      HpRegen: [500, 10]
+      Hp: [5000, 0, 5000, 500]
+      HpRegen: [500, 0.1]
       Atk: [500, 0, 10]
       Arm: [500, 0, 10]
       Exp: [0, 0, 0]
-      Level: 50
+      Level: 9
       Gold: 0
     RenderGroup: 1
     FrustumRange: 1
