--- a/Assets/Scenes/Flogas_Dungeon.yaml
+++ b/Assets/Scenes/Flogas_Dungeon.yaml
@@ -1520,7 +1520,7 @@ GameObjects:
     Com_Transform:
       Translation: [0, -0.583999753, -9.61990929]
       Rotation: [90, -0, 0]
-      Scale: [22.5215168, 26.0779991, 1.79999995]
+      Scale: [22.5215149, 26.0779991, 1.79999995]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -1644,8 +1644,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-7.69327307, 1.31196868, -8.28250313]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [0.290435791, 0.24647288, 0.602381706]
+      Rotation: [7.56229639, 26.7907486, 2.39110079e-07]
+      Scale: [0.294043392, 0.249826655, 0.607063591]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -1681,8 +1681,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-3.36255193, 2.15149903, 1.52762651]
-      Rotation: [11.3099318, -0, 0]
-      Scale: [0.632724285, 0.478720188, 1.30769563]
+      Rotation: [7.56229544, 26.7907505, 2.39110079e-07]
+      Scale: [0.64052546, 0.485242456, 1.3178066]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2037,8 +2037,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [3.45357752, 2.11951017, 1.27384841]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [0.631664932, 0.47772637, 1.30825591]
+      Rotation: [7.56229639, 26.7907486, 2.39110051e-07]
+      Scale: [0.63945812, 0.484241873, 1.31836307]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2074,8 +2074,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [7.93538809, 1.34698355, -8.84075165]
-      Rotation: [11.3099318, -0, 0]
-      Scale: [0.315950006, 0.385125041, 1.30844522]
+      Rotation: [7.56229639, 26.7907505, 2.39110079e-07]
+      Scale: [0.319845974, 0.390251219, 1.31854451]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2111,8 +2111,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [8.08104706, 1.34008193, -3.44539356]
-      Rotation: [11.3099318, -0, 0]
-      Scale: [0.315851778, 0.385185957, 1.30825591]
+      Rotation: [7.56229639, 26.7907467, 2.39110051e-07]
+      Scale: [0.319748491, 0.390302986, 1.31836307]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2148,8 +2148,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-7.58388233, 1.30740726, -0.59903425]
-      Rotation: [11.3099327, -0, 0]
-      Scale: [0.315916598, 0.385203809, 1.30846059]
+      Rotation: [7.56229639, 26.7907505, 2.39110079e-07]
+      Scale: [0.319813401, 0.390389383, 1.31855476]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2185,8 +2185,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [8.8090992, 2.12478662, -5.06439114]
-      Rotation: [11.3099327, -0, 0]
-      Scale: [0.632161736, 0.477757215, 1.30830777]
+      Rotation: [7.56229639, 26.7907486, 2.39110051e-07]
+      Scale: [0.639956594, 0.484278142, 1.31840968]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2222,8 +2222,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.99510837, 2.0846324, -11.0818748]
-      Rotation: [11.3099318, -0, 0]
-      Scale: [0.631949902, 0.477778196, 1.30830777]
+      Rotation: [7.56229639, 26.7907467, 2.39110051e-07]
+      Scale: [0.639743984, 0.484314829, 1.31840968]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2259,8 +2259,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-2.36362243, 2.15001464, -11.0893078]
-      Rotation: [11.3099318, -0, 0]
-      Scale: [0.520029247, 0.634003341, 1.30849636]
+      Rotation: [7.56229544, 26.7907505, 2.39110079e-07]
+      Scale: [0.526442468, 0.642400444, 1.31858158]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2296,8 +2296,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-8.99177265, 2.11422968, -4.94483566]
-      Rotation: [11.3099318, -0, 0]
-      Scale: [0.533636391, 0.646130562, 1.44130397]
+      Rotation: [7.56229639, 26.7907505, 2.39110051e-07]
+      Scale: [0.540204048, 0.654771447, 1.45240355]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2333,8 +2333,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.39247227, 2.56994104, 0.420668274]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [0.883905947, 0.717658639, 1.30849636]
+      Rotation: [7.56229544, 26.7907505, 2.39110079e-07]
+      Scale: [0.894830704, 0.727405608, 1.31858158]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2370,8 +2370,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-1.08791733, 2.59111428, 0.498315632]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [0.90171659, 0.697846413, 1.30825591]
+      Rotation: [7.56229639, 26.7907486, 2.39110079e-07]
+      Scale: [0.912845433, 0.707253277, 1.31836307]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -3395,3 +3395,43 @@ GameObjects:
         CharacterController: false
     RenderGroup: 1
     FrustumRange: 1
+  - Name: TownPortal
+    UUID: 18265442591277927376
+    Active: false
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 4
+    BillBord: false
+    Com_Transform:
+      Translation: [-1.82138831e-06, 0.546949327, -0.150000006]
+      Rotation: [-179.999893, -89.9999466, -179.999893]
+      Scale: [1, 2, 1]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Map\Portal\
+      MeshFileName: PortalEffect.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\FX_Sky_001_TEX_KKJ.dds
+    Effect_Setting:
+      TextureDiffusePath: ""
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\abs.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Mask\FX_Mask_002_1_TEX_KKJ.png
+      TextureNormalPath: ""
+      ScrollSpeedX: [1, 1, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 1.5
+      DistortionBias: 1.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
