--- a/Assets/Scenes/UrsaDungeon.yaml
+++ b/Assets/Scenes/UrsaDungeon.yaml
@@ -1590,7 +1590,7 @@ GameObjects:
     PassIndex: 0
     NumOBB: 0
     Com_Transform:
-      Translation: [0, -0.550000012, 0]
+      Translation: [0, -0.5, 0]
       Rotation: [0, -0, 0]
       Scale: [1, 1, 1]
     Com_Collider:
