--- a/Assets/Scenes/Flogas.yaml
+++ b/Assets/Scenes/Flogas.yaml
@@ -93,6 +93,14 @@ GameObjects:
       MeshFileName: Element_Flogas.fbx
       HasCollider: false
       Equipment: false
+    Com_Stat:
+      Hp: [100, 0, 100, 100]
+      HpRegen: [0.100000001, 0.100000001]
+      Atk: [0, 0, 0]
+      Arm: [1, 0, 1]
+      Exp: [0, 100, 100]
+      Level: 1
+      Gold: 0
     RenderGroup: 1
     FrustumRange: 1
   - Name: El_Flogas02
@@ -133,6 +141,14 @@ GameObjects:
       MeshFileName: Element_Flogas.fbx
       HasCollider: false
       Equipment: false
+    Com_Stat:
+      Hp: [100, 0, 100, 100]
+      HpRegen: [0.100000001, 0.100000001]
+      Atk: [0, 0, 0]
+      Arm: [1, 0, 1]
+      Exp: [0, 100, 100]
+      Level: 1
+      Gold: 0
     RenderGroup: 1
     FrustumRange: 1
   - Name: El_Flogas03
@@ -173,6 +189,14 @@ GameObjects:
       MeshFileName: Element_Flogas.fbx
       HasCollider: false
       Equipment: false
+    Com_Stat:
+      Hp: [100, 0, 100, 100]
+      HpRegen: [0.100000001, 0.100000001]
+      Atk: [0, 0, 0]
+      Arm: [1, 0, 1]
+      Exp: [0, 100, 100]
+      Level: 1
+      Gold: 0
     RenderGroup: 1
     FrustumRange: 1
   - Name: El_Flogas04
@@ -213,51 +237,13 @@ GameObjects:
       MeshFileName: Element_Flogas.fbx
       HasCollider: false
       Equipment: false
+    Com_Stat:
+      Hp: [100, 0, 100, 100]
+      HpRegen: [0.100000001, 0.100000001]
+      Atk: [0, 0, 0]
+      Arm: [1, 0, 1]
+      Exp: [0, 100, 100]
+      Level: 1
+      Gold: 0
     RenderGroup: 1
     FrustumRange: 1
-  - Name: Empty Object
-    UUID: 3830365701123246019
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 0
-    BillBord: false
-    Com_Transform:
-      Translation: [0, 0, 0]
-      Rotation: [0, -0, 0]
-      Scale: [1, 1, 1]
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ""
-      TextureNoisePath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-  - Name: Empty Object
-    UUID: 1169969195196319496
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 0
-    BillBord: false
-    Com_Transform:
-      Translation: [0, 0, 0]
-      Rotation: [0, -0, 0]
-      Scale: [1, 1, 1]
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ""
-      TextureNoisePath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
