--- a/Assets/Scenes/m_pxVertices2.yaml
+++ b/Assets/Scenes/m_pxVertices2.yaml
@@ -95,8 +95,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.55694079, -0.13206704, 1.43441713]
-      Rotation: [-142.206467, 86.460083, -179.999985]
-      Scale: [0.0215007551, 0.222012416, 0.183015227]
+      Rotation: [13.4258528, 12.2550831, 2.18420666e-07]
+      Scale: [0.0214987695, 0.221989065, 0.183015987]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -333,7 +333,7 @@ GameObjects:
     Com_Transform:
       Translation: [2, 0, 2]
       Rotation: [-90, -0, 0]
-      Scale: [0.499740988, 0.49999848, 0.50000006]
+      Scale: [0.499740958, 0.49999848, 0.50000006]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\
       MeshFileName: BombBeam3.fbx
@@ -372,8 +372,8 @@ GameObjects:
     NumOBB: 0
     Com_Transform:
       Translation: [-1.38995612, 0, 0.240088522]
-      Rotation: [-142.206467, 86.460083, -179.999985]
-      Scale: [0.998939812, 0.0999568552, 0.995339334]
+      Rotation: [13.4258528, 12.255084, 2.18420666e-07]
+      Scale: [0.99884963, 0.0999464691, 0.995342493]
     Com_VIBuffer:
       Type: Rect
       TexturePath: ..\..\Assets\UITexture\Hud\HpBarAlpha2.png
